# bring-your-own-rag

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-cpu.txt  requirements.txt
docs/: architecture.md  local-mvp.md  platform-support.md  troubleshooting.md
src/build_your_own_rag/: __init__.py  chunking.py  cli.py  config.py  embeddings.py  models.py  pipeline.py  source.py
src/build_your_own_rag/db/: migrate.py  schema.sql
src/build_your_own_rag/generation/: ollama.py
src/build_your_own_rag/parsing/: __init__.py  asciidoc_parser.py  csv_parser.py  docling_parser.py  docx_parser.py  html_parser.py  image_parser.py  markdown_parser.py  parser_registry.py  pptx_parser.py  text_parser.py  xlsx_parser.py
src/build_your_own_rag/retrieval/: hybrid.py
src/build_your_own_rag/storage/: postgres.py
src/build_your_own_rag/utils/: json.py  logger.py
tests/: e2e_tabular_test.py  test_asciidoc_parser.py  test_chunking.py  test_config.py  test_csv_parser.py  test_docling_parser.py  test_docx_parser.py  test_generation.py  test_html_parser.py  test_hybrid.py  test_image_parser.py  test_integration.py  test_markdown_parser.py  test_pptx_parser.py  test_text_parser.py  test_xlsx_parser.py
