[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "build-your-own-rag"
version = "0.1.0"
description = "Local PDF-first RAG ingestion and hybrid retrieval MVP."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "docling>=2.0.0",
    "easyocr>=1.7.0",
    "pypdf>=4.0.0",
    "sentence-transformers>=3.0.0",
    "psycopg[binary,pool]>=3.2.0",
    "numpy>=1.26.0",
]

[project.scripts]
build-your-own-rag = "build_your_own_rag.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
